--- a/css/style.css
+++ b/css/style.css
@@ -973,6 +973,15 @@ header.subPage {
     margin-left: 40px;
 }
 
+.feature .list-paragraph {margin-left: 30px;}
+
+.feature .list {
+    float: left;
+    padding: 5px;
+    color: #dfa904;
+    margin-right: 5px;
+}
+
 /*------------------------------------*\
 	Numbers
 \*------------------------------------*/
@@ -1915,3 +1924,17 @@ header.subPage {
 .tags a {
     text-transform: uppercase;
 }    
+
+
+blockquote {
+    padding: 30px 0;
+    text-wrap: balance;
+    background-color: #eee;
+}
+blockquote h3{
+    margin-bottom: 0;
+}
+
+.balanced {
+    text-wrap: balance;
+}
